--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -1,3 +1,3 @@
-<div class="side-menu">
-	<a th:each="action : ${actions}" th:text="${action.getDisplayName}" href="${action.urlPattern}" class="menu-item"/>
+<div class="side-menu" th:fragment="menu">
+	<a th:each="action : ${actions}" th:text="${action.getDisplayName}" th:href="${action.getUrlPattern}" class="menu-item"/>
 </div>
