--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,8 +6,8 @@
 <body>
 	<header th:replace="fragments/header :: header"></header>
 	<div class="maincontent">
-		<div th:replace="fragments/menu :: div"></div>
-		<!--<div th:replace="fragments/actionBody :: actionBody"></div>	-->
+		<div th:replace="fragments/menu :: menu"></div>
+		<div th:replace="fragments/actionBody :: actionBody"></div>	
 	</div>
 </body>
 
