--- a/src/main/resources/templates/fragments/actionBody.html
+++ b/src/main/resources/templates/fragments/actionBody.html
@@ -11,7 +11,7 @@
 		<div th:insert="leavetypes.html :: body"></div>
 	</div>
 	
-	<div th:if="${action == 'view-leave-entitlements'}">
+	<div th:if="${action == 'viewLeaveEntitlements'}">
 		<div th:insert="leave-entitlement-list.html :: body"></div>
 	</div>
 	
