--- a/src/main/resources/templates/leave-list.html
+++ b/src/main/resources/templates/leave-list.html
@@ -1,38 +1,52 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="ISO-8859-1">
-<title>LeaveApproveList</title>
-<link rel="stylesheet"
-href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <meta charset="ISO-8859-1">
+    <title>LeaveApproveList</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
 
-<h3>LeaveApprove List</h3>
+    <h3>Leave Approve List</h3>
+    <a class="btn btn-primary" href="/leave-applications">Approve list</a>
 
-<table class="table table-striped table-responsive-md">
-<thead>
-<tr>
-<th>Employee</th>
-<th>Start Date</th>
-<th>End Date</th>
+    <!-- Add a form for status selection -->
+    <form th:action="@{/leaveapprove/list}" method="get">
+        <div class="form-group">
+            <label for="status">Filter by Status:</label>
+            <select class="form-control" id="status" name="status">
+                <option value="">--Select a Status--</option>
+                <option value="Applied">Applied</option>
+                <option value="Approved">Approved</option>
+                <option value="Cancelled">Cancelled</option>
+                <option value="Deleted">Deleted</option>
+                <option value="Rejected">Rejected</option>
+            </select>
+        </div>
+        <button type="submit" class="btn btn-info">Filter</button>
+    </form>
 
-<th>Reason</th>
-<th>Status</th>
-</tr>
-</thead>
-<tbody>
-<tr th:each="leave : ${leaves}">
-<td th:text="${leave.employee.name}"></td>
-<td th:text="${leave.start}"></td>
-<td th:text="${leave.end}"></td>
-
-<td th:text="${leave.reasons}"></td>
-<td th:text="${leave.status}"></td>
-</tr>
-</tbody>
-</table>
+    <table class="table table-striped table-responsive-md">
+        <thead>
+        <tr>
+            <th>Employee</th>
+            <th>Start Date</th>
+            <th>End Date</th>
+            <th>Reason</th>
+            <th>Status</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="leave : ${leaves}">
+            <td><a th:href="@{'/leaveapprove/detail'(id=${leave.id})}" th:text="${leave.employee.name}"></a></td>
+            <td th:text="${leave.start}"></td>
+            <td th:text="${leave.end}"></td>
+            <td th:text="${leave.reasons}"></td>
+            <td th:text="${leave.status}"></td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 </body>
 </html>
