--- a/src/main/resources/templates/leave-details.html
+++ b/src/main/resources/templates/leave-details.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <title>Leave Detail</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" rel="stylesheet">
+	<style>
+		    .status-applied { color: blue; }
+		    .status-rejected { color: red; }
+		    .status-approved { color: green; }
+		    .status-deleted { color: purple; }
+	</style>
 </head>
 <body>
 <div class="container mt-4">
@@ -23,11 +29,21 @@
             <strong>Reason:</strong> <span th:text="${leave.reasons}"></span>
         </div>
         <div class="col-md-6">
-            <strong>Status:</strong> <span th:text="${leave.status}"></span>
+            <strong>Status:</strong>
+			<span th:switch="${leave.status}">
+			        <span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Applied}" class="status-applied" th:text="${leave.status}"></span>
+			        <span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Rejected}" class="status-rejected" th:text="${leave.status}"></span>
+			        <span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Approved}" class="status-approved" th:text="${leave.status}"></span>
+			        <span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Deleted}" class="status-deleted" th:text="${leave.status}"></span>
+			        <span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Cancelled}" class="status-cancelled" th:text="${leave.status}"></span>
+			</span>
         </div>
         <div class="col-md-6">
             <strong>Leave Type:</strong> <span th:text="${leave.type.type}"></span>
         </div>
+		<div class="col-md-6">
+		    <strong>Comment:</strong> <span th:text="${leave.comment}"></span>
+		</div>
     </div>
 
     <!-- Approval and Rejection Form -->
@@ -63,7 +79,13 @@
             <td th:text="${leave.start}"></td>
             <td th:text="${leave.end}"></td>
             <td th:text="${leave.reasons}"></td>
-            <td th:text="${leave.status}"></td>
+			<td th:switch="${leave.status}">
+				<span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Applied}" class="status-applied" th:text="${leave.status}"></span>
+				<span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Rejected}" class="status-rejected" th:text="${leave.status}"></span>
+				<span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Approved}" class="status-approved" th:text="${leave.status}"></span>
+				<span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Deleted}" class="status-deleted" th:text="${leave.status}"></span>
+				<span th:case="${T(sg.nus.iss.com.Leaveapp.model.LeaveStatus).Cancelled}" class="status-cancelled" th:text="${leave.status}"></span>
+			</td>
         </tr>
         </tbody>
     </table>
