--- a/src/main/resources/templates/fragments/actionBody.html
+++ b/src/main/resources/templates/fragments/actionBody.html
@@ -16,6 +16,14 @@
 		<div th:insert="leave-entitlement-list.html :: body"></div>
 	</div>
 	
+	<div th:if="${action == 'add-employee'}">
+		<div th:insert="employee_form.html :: body"></div>
+	</div>
+	
+	<div th:if="${action == 'edit-employee'}">
+			<div th:insert="employee_form.html :: body"></div>
+		</div>
+	
 	<!-- Employee Use Cases -->
 	<div th:if="${action == 'leaveSubmitForm'}">
 		<div th:insert="submit-leave-app.html :: body"></div>
