--- a/src/main/resources/templates/leave_type_form.html
+++ b/src/main/resources/templates/leave_type_form.html
@@ -57,29 +57,32 @@
 </head>
 <body>
     <h1>Leave Entitlement Form</h1>
-    <form th:action="@{/admin/leavetypes/save}" th:object="${leaveEntitlement}" method="post" action="#">
-        <input type="hidden" th:field="*{id}" />
+    <form th:action="@{/admin/leavetypes/save}" th:object="${leaveEntitlement}" method="post">
         <div>
             <label>Role:</label>
             <select th:field="*{role}">
-                <option th:each="role : ${roles}" th:value="${role}" th:text="${role.name}" ></option>
+                <option th:each="role : ${roles}" th:value="${role.id}" th:text="${role.name}" ></option>
             </select>
         </div>
         <div>
             <label>Annual Leave:</label>
-            <input type="number" th:field="*{annualLeave}" />
+            <input type="number" th:field="*{annualLeave}" th:value="${leaveEntitlement.annualLeave}" />
+			<span th:if="${#fields.hasErrors('annualLeave')}" th:errors="*{annualLeave}"></span>
         </div>
         <div>
             <label>Sick Leave:</label>
-            <input type="number" th:field="*{sickLeave}" />
+            <input type="number" th:field="*{sickLeave}" th:value="${leaveEntitlement.sickLeave}"/>
+			<span th:if="${#fields.hasErrors('sickLeave')}" th:errors="*{sickLeave}"></span>
         </div>
         <div>
             <label>Compensation Leave:</label>
-            <input type="number" th:field="*{compensationLeave}" />
+            <input type="number" th:field="*{compensationLeave}" th:value="${leaveEntitlement.compensationLeave}"/>
+			<span th:if="${#fields.hasErrors('compensationLeave')}" th:errors="*{compensationLeave}"></span>
         </div>
         <div>
             <label>Year:</label>
-            <input type="number" th:field="*{year}" />
+            <input type="number" th:field="*{year}" th:value="${leaveEntitlement.year}"/>
+			<span th:if="${#fields.hasErrors('year')}" th:errors="*{year}"></span>
         </div>
         <div>
             <button type="submit">Save</button>
