--- a/src/main/resources/templates/submit-leave-app.html
+++ b/src/main/resources/templates/submit-leave-app.html
@@ -9,9 +9,6 @@
 <div class="container" th:fragment="submitLeaveAppBody">
     <h2>Leave Application Form</h2>
     <form th:action="@{/leave/submitForm}" th:object="${leave}" method="post">
-		<div th:if="${hasError}">
-			<p th:each="error:${errors}" th:text="${error}" style="color:red;"></p>
-		</div>
 		<div class="mb-3">
 			<span th:text="${employeeName}"></span>
 		</div>
@@ -26,21 +23,25 @@
 		<div class="form-group">
 			<label for="startDate">Start Date:</label>
 			<input type="date" id="startDate" th:field="*{start}" class="form-control" />
+			<span th:if="${#fields.hasErrors('start')}" th:errors="*{start}" class="inputErrorMessage"></span>
 		</div>
 		
 		<div class="form-group">
 			<label for="endDate">End Date:</label>
 			<input type="date" id="endDate" th:field="*{end}" class="form-control" />
+			<span th:if="${#fields.hasErrors('end')}" th:errors="*{end}" class="inputErrorMessage"></span>
 		</div>
 		
 		<div class="mb-3">
 			<label for="reasons" class="form-label">Reasons</label>
 			<textarea class="form-control" id="reasons" th:field="*{reasons}" rows="3"></textarea>
+			<span th:if="${#fields.hasErrors('reasons')}" th:errors="*{reasons}" class="inputErrorMessage"></span>
 		</div>
 		
 		<div class="mb-3">
 		    <label for="leaveStatus" class="form-label">Supporting Coworker</label>
 			<input type="text" class="form-control" id="SupportingCoworker" th:field="*{nameOfSupportingCoworker}" required>
+			<span th:if="${#fields.hasErrors('nameOfSupportingCoworker')}" th:errors="*{nameOfSupportingCoworker}" class="inputErrorMessage"></span>
 		</div>
 		
 		<div class="d-flex flex-row p-2">
@@ -50,6 +51,7 @@
 		<div class="mb-3">
 			<label for="leaveType" class="form-label">Overseas Contact</label>
 			<input type="text" class="form-control" disabled id="overseasContact" th:field="*{overseasContact}">
+			<span th:if="${#fields.hasErrors('overseasContact')}" th:errors="*{overseasContact}" class="inputErrorMessage"></span>
 		</div>
 		
 		<br/>
