--- a/src/main/resources/templates/leavetypes.html
+++ b/src/main/resources/templates/leavetypes.html
@@ -73,6 +73,6 @@
             </tr>
         </tbody>
     </table>
-    <a href="/admin/leavetypes/add" class="add-leave-type">Add Leave Type</a>
+    <a href="/admin/leavetypes/add" class="add-leave-type">Add Entitlement</a>
 </body>
 </html>
