catch exception when delete fail due to data integrity

--- a/manage-leave-app/src/main/resources/templates/leave-app.html
+++ b/manage-leave-app/src/main/resources/templates/leave-app.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}" />
 </head>
 <body>
-    <h2>Leave Applications</h2>
+    <h2>Manage My Leaves</h2>
     <table>
         <tr>
             <th>Reason</th>
