--- a/src/main/resources/templates/employee_form.html
+++ b/src/main/resources/templates/employee_form.html
@@ -77,7 +77,7 @@
         </div>
         <div>
             <label>Password:</label>
-            <input type="text" th:field="*{password}" />
+            <input type="password" th:field="*{password}" />
         </div>
         <div>
             <label>Manager:</label>
