--- a/src/main/resources/templates/update-leave-form.html
+++ b/src/main/resources/templates/update-leave-form.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 
-<div class="container" th:fragment="submitLeaveAppBody">
+<div class="container" th:fragment="body">
     <h2>Update Leave Application</h2>
     <form th:action="@{/leave/submitForm}" th:object="${leave}" method="post">
+		<input hidden type="number" th:field="*{id}" name="id"/>
 		<div class="mb-3">
 			<label for="leaveType" class="form-label">Leave Type</label>
 			<select class="form-control" id="leaveType" name="leaveType" required>
@@ -18,13 +19,13 @@
 		
 		<div class="form-group">
 			<label for="startDate">Start Date:</label>
-			<input type="date" id="startDate" th:field="*{start}" class="form-control" />
+			<input type="date" id="startDate" th:field="*{start}" class="form-control" th:value="${start}" />
 			<span th:if="${#fields.hasErrors('start')}" th:errors="*{start}" class="inputErrorMessage"></span>
 		</div>
 		
 		<div class="form-group">
 			<label for="endDate">End Date:</label>
-			<input type="date" id="endDate" th:field="*{end}" class="form-control" />
+			<input type="date" id="endDate" th:field="*{end}" class="form-control" th:value="${end}"/>
 			<span th:if="${#fields.hasErrors('end')}" th:errors="*{end}" class="inputErrorMessage"></span>
 		</div>
 		
